tests/elab/errors/fun_app/too_many_args.snapshot
exit status: 1

stdout = """
def error: #error = #error;
types of expressions:
span   | source                                   | type
-------|------------------------------------------|-----------------------------
12..17 | Array                                    | Type -> Int -> Type
12..28 | Array(Int, 0, 0)                         | #error
18..21 | Int                                      | Type
23..24 | 0                                        | Int
"""

stderr = """
error: called function with too many arguments
  ┌─ tests/elab/errors/fun_app/too_many_args.pion:1:13
  │
1 │ def error = Array(Int, 0, 0);
  │             ^^^^^^^^^^^^^^^^
  │
  = help: the function expects 2 arguments, but recieved 3 arguments
  = help: the type of the function is `Type -> Int -> Type`

aborting due to 1 previous error
"""
